Added event hooks for other plugins and an Apay command for admins to give currency to someone.

--- a/Uconomy_Extension/Uconomy_Extension.csproj
+++ b/Uconomy_Extension/Uconomy_Extension.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandApay.cs" />
     <Compile Include="CommandExchange.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="PlayerUE.cs" />
