--- a/ZaupUconomyEssentials.csproj
+++ b/ZaupUconomyEssentials.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{717C244E-28E8-48B5-B4C2-5C739F8348FE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Uconomy_Essentials</RootNamespace>
-    <AssemblyName>Uconomy_Essentials</AssemblyName>
+    <RootNamespace>ZaupUconomyEssentials</RootNamespace>
+    <AssemblyName>ZaupUconomyEssentials</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -51,6 +51,7 @@
     <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\MySql.Data.dll</HintPath>
+	  <Private>False</Private>
     </Reference>
     <Reference Include="Rocket.API, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -90,9 +91,9 @@
     <Compile Include="CommandExchange.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="PlayerUE.cs" />
-    <Compile Include="UconomyEConfiguration.cs" />
+    <Compile Include="ZaupUconomyEConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Uconomy_Essentials.cs" />
+    <Compile Include="ZaupUconomyEssentials.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\I18N.dll">
