--- a/ZaupUconomyEssentials.csproj
+++ b/ZaupUconomyEssentials.csproj
@@ -115,7 +115,7 @@
     <Compile Include="PlayerUE.cs" />
     <Compile Include="UconomyEConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Uconomy_Essentials.cs" />
+    <Compile Include="UconomyEssentials.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\BouncyCastle.Crypto.dll">
